Fix size of filters on mobile and tablet.

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -93,7 +93,12 @@ ul {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;
+  max-width: 70%;
+}
+@media screen and (min-width: 768px) {
+  .filters-flux {
+    max-width: 50%;
+  }
 }
 @media screen and (min-width: 1100px) {
   .filters-flux {
