--- a/assets/styles/sass/base/_flux.sass
+++ b/assets/styles/sass/base/_flux.sass
@@ -28,7 +28,9 @@
     width: 100%
     margin-left: auto
     margin-right: auto
-    max-width: 50%
+    max-width: 70%
+    +utils.responsive(litle-tablet)
+        max-width: 50%
     +utils.responsive(laptop)
         max-width: 80%
 
